sorted/tests/04-variants-with-data.stderr
error: Dyn should sort before Fmt
  --> tests/04-variants-with-data.rs:21:5
   |
21 |     Dyn(Box<dyn StdError>),
   |     ^^^
